--- a/RAJWADI_BUS/RajwadiBus.Web/Client/Shared/MainLayout.razor
+++ b/RAJWADI_BUS/RajwadiBus.Web/Client/Shared/MainLayout.razor
@@ -6,7 +6,7 @@
 
 <div class="main">
     <div class="top-row px-4">
-        <a href="http://blazor.net" target="_blank" class="ml-md-auto">Admin</a>
+        <a href="#" target="_blank" class="ml-md-auto">Admin</a>
     </div>
 
     <div class="content px-4">
