--- a/RAJWADI_BUS/RajwadiBus.Web/Client/Shared/NavMenu.razor
+++ b/RAJWADI_BUS/RajwadiBus.Web/Client/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="BusMaster">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Bus Master
+                <span class="oi oi-aperture" aria-hidden="true"></span> Bus Master
             </NavLink>
         </li>
     </ul>
